[gd_scene load_steps=5 format=3 uid="uid://ufir5bssedab"]

[ext_resource type="Script" uid="uid://car7l43uurqui" path="res://script/menu.gd" id="1_con2f"]
[ext_resource type="FontFile" uid="uid://cyve1ccpigpx0" path="res://assets/font/vendetta.ttf" id="3_4ytvr"]

[sub_resource type="Theme" id="Theme_vjb58"]

[sub_resource type="CanvasTexture" id="CanvasTexture_con2f"]
specular_color = Color(0, 0, 0, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_con2f")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_right = 1151.0
offset_bottom = 649.0
theme = SubResource("Theme_vjb58")
texture = SubResource("CanvasTexture_con2f")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -205.0
offset_top = 108.0
offset_right = 205.0
offset_bottom = 188.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_4ytvr")
theme_override_font_sizes/font_size = 80
text = "VENDETTA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.559
anchor_right = 0.5
anchor_bottom = 0.559
offset_left = -97.5
offset_top = -80.732
offset_right = 97.5
offset_bottom = 80.268
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Host" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_pressed_color = Color(0.745296, 0.872918, 0.118162, 1)
text = "Host Game"

[node name="Join" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
